2002-02-27  Angus Leeming  <a.leeming@ic.ac.uk>

	* GraphicsImageXPM.[Ch]: more rigorous use of types (signed/unsigned).
	(Data d-tor): introduce memory leak temporarily, to "fix" a crash
	in free_color_table.
	(unique_color_string): use the correct string c-tor.

2002-02-15  Angus Leeming  <a.leeming@ic.ac.uk>

	* ImageLoader.[Ch]:
	* ImageLoaderXPM.[Ch]: removed.

	* GraphicsConverter.[Ch]:
	* GraphicsImage.[Ch]:
	* GraphicsImageXPM.[Ch]:
	* GraphicsParams.[Ch]:
	* GraphicsTypes.h: new files.

	* All files. A total re-write of the graphics cache. The cache now
	supports asynchronous file conversion and file loading. Images
	can be cropped, rotated and scaled for display on the LyX screen.
	The old LyXImage and ImageLoader have been combined in a new class
	GImage. Ditto, ImageLoaderXPM's functionality has been moved into
	GImageXPM.

2002-02-07  Herbert Voss  <voss@lyx.org>

	* GraphicsCacheItem.C: use unzipFile() from support/filetools

2002-01-31  Herbert Voss  <voss@lyx.org>

	* GraphicsCacheItem.h: handle filetype without the file extension;
	getting type from contents; handle zipped files

2002-01-27  Herbert Voss  <voss@lyx.org>

	* GraphicsCacheItem.h: added Converting to the ImageStatus enum.

2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* ImageLoaderXPM.C: don't set XpmColorKey flag if we don't use it
 
2001-12-19  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* GraphicsCacheItem.h: do not include <config.h> in header files

2001-09-21  Angus Leeming  <a.leeming@ic.ac.uk>

	* ImageLoaderXPM.C (runImageLoader): If the pixmap contains a
	transparent colour, then set it to the colour of the background.
	Also take account of the monochrome, grayscale of color
	preferences option.

2001-09-20  Angus Leeming  <a.leeming@ic.ac.uk>

	* GraphicsCacheItem.C (convertImage): only convert if "from" and "to"
	are different. Thus, don't delete the "to" if it's the original!

2001-09-01  John Levon  <moz@compsoc.man.ac.uk>
